--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="canonical" />
+    <!-- <link rel="canonical" />
     <meta name="twitter:card" content="summary_large_image" />
-    <!-- <meta name="twitter:site" content="@nytimesbits" /> -->
     <meta name="twitter:creator" content="@phatbhoy67" />
     <meta property="og:url" content="" />
     <meta property="og:title" content="Coding Quotes" />
@@ -14,7 +13,7 @@
     <meta
       property="og:image"
       content="https://res.cloudinary.com/phatbhoy67/image/upload/v1534414969/codepen/tic-tac-toe.png"
-    />
+    /> -->
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:300i,500"
       rel="stylesheet"
@@ -25,6 +24,6 @@
   <body>
     <div id="root"></div>
     <script src="index.js"></script>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
   </body>
 </html>
