--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
   <body>
     <div id="root"></div>
     <script src="index.js"></script>
-    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
