Added meta tags

--- a/index.html
+++ b/index.html
@@ -5,15 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- <link rel="canonical" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:creator" content="@phatbhoy67" />
-    <meta property="og:url" content="" />
-    <meta property="og:title" content="Coding Quotes" />
-    <meta property="og:description" content="Long and short coding quotes." />
+    <!-- Primary Meta Tags -->
+    <title>Code Quotes</title>
+    <meta name="title" content="Code Quotes" />
+    <meta
+      name="description"
+      content="Get a random code quote to share on Twitter."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://phatbhoy67.github.io/fcc-quote-tweet-parcel/"
+    />
+    <meta property="og:title" content="Code Quotes" />
+    <meta
+      property="og:description"
+      content="Get a random code quote to share on Twitter."
+    />
     <meta
       property="og:image"
-      content="https://res.cloudinary.com/phatbhoy67/image/upload/v1534414969/codepen/tic-tac-toe.png"
-    /> -->
+      content="https://res.cloudinary.com/phatbhoy67/image/upload/v1548947585/fcc-code-tweet-parcel.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@phatbhoy67" />
+    <meta
+      property="twitter:url"
+      content="https://phatbhoy67.github.io/fcc-quote-tweet-parcel/"
+    />
+    <meta property="twitter:title" content="Code Quotes" />
+    <meta
+      property="twitter:description"
+      content="Get a random code quote to share on Twitter."
+    />
+    <meta
+      property="twitter:image"
+      content="https://res.cloudinary.com/phatbhoy67/image/upload/v1548947585/fcc-code-tweet-parcel.png"
+    />
+
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:300i,500"
       rel="stylesheet"
