--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- <link rel="canonical" />
+    <link
+      id="favicon"
+      rel="icon"
+      href="https://res.cloudinary.com/phatbhoy67/image/upload/v1539865710/favicon.ico"
+      type="image/x-icon"
+    />
+    <!-- <link rel="canonical" /> -->
     <!-- Primary Meta Tags -->
     <title>Code Quotes</title>
     <meta name="title" content="Code Quotes" />
